Fixed overlapping issues

--- a/index-styler.css
+++ b/index-styler.css
@@ -167,7 +167,7 @@ form input[type="text"]{
   border-style: solid;
   border-color: #fff;
   border-width:thin;
-  
+  overflow: auto;
 }
 #project1 #row1{
   display:flex;
@@ -187,7 +187,7 @@ form input[type="text"]{
   border-style: solid;
   border-color: #fff;
   border-width:thin;
-  
+  overflow: auto;
 }
 #project2 #row1{
   display:flex;
